src/css/page.less
.lorem {
  background: pink !important;
}

nav.top-bar {
  border-bottom: 1px solid @gray;
  position: relative;
  clear: both;
  z-index: 99;

  @media @mobile {
    border: none;
    top: 0;
    height: 40px;
    width: 100%;
    background: @green;
  }

  .logo {
    width: 100%;
    position: relative;
    top: 30px;
    text-align: center;
    display: block;

    @media @mobile {
      top: 0;

    }

    img {
      box-sizing: content-box;
      height: 30px;
      background: @green;
      padding: 10px;
      border: none;

      @media @mobile {
        background: none;
        padding: 5px;
      }
    }
  }
}


header {
  width: 100%;
  padding: 0 8px;
  text-align: center;

  .quiz-label {
    text-transform: uppercase;
    font-size: 16px;
    font-family: @block;
    font-weight: normal;
    color: white;
    background: @dark-gray;
    display: inline-block;
    padding: 5px;
    margin: 5px auto 0;

    @media @tablet {
      font-size: 14px;
    }
  }

  .title {
    font-family: @block;
    color: @blue;
    text-transform: uppercase;
    font-weight: normal;
    font-size: 3em;
    line-height: 1.2em;
    margin: 5px auto 0.5em;

    @media @mobile {
      line-height: 1em;
      margin-bottom: 0;
    }

    .green {
      font-size: 1.8em;
      display: block;

      @media @mobile {
        font-size: inherit;
      }
    }
  }

  .chatter {
    color: @dark-gray;
    font-family: @body;
    font-size: 1.2em;
    text-align: center;
    margin: 1em auto;
    max-width: 840px;
  }
}

.divider {
  border: 4px solid @blue;
}

.credits {
  font-family: @body;
  font-size: 0.8em;
  text-align: center;
  padding: 10px;

  .credit-name {
    font-weight: 700;
  }

  @media @mobile {
    padding: 15px;
  }
}

.ad {
  height: 90px;
  width: 750px;
  margin: 0 auto;

  .floatleft {
    float: left;
  }

  @media @tablet {
    display: none;
  }
}

.tower-ad {
  width: 320px;
  padding: 0 10px;
  float: right;

  @media @tablet {
    display: none;
  }
}

footer {
  width: 100%;
  clear: both;
  margin: 1em auto;
  padding-top: 1em;

  @media @mobile {
    padding-top: 0;
  }
}

.recirc {
  display: none;
  color: @dark-gray;
  font-family: @body;
  font-style: italic;

  &.show {
    display: inline-block;
  }

  a {
    color: @green;
    text-decoration: none;

    &:hover {
      .recirc-link {
        text-decoration: underline;
      }

      .fa-share {
        display: inline-block;
      }
    }
  }

  .fa-share {
    display: none;
    font-size: 12px;
    vertical-align: top;
    margin-top: 5px;
  }
}

